fix scrollpane alignment and include as a mixin on fifa dash elements

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,19 +1,3 @@
-::-webkit-scrollbar {
-    height: 3px;
-    width: 3px;
-    background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(255,255,255, 0.6);
-    -webkit-border-radius: 3ex;
-    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
-}
-
-::-webkit-scrollbar-corner {
-    background: transparent;
-}
-
 .sidebar {
   width: 250px;
   height: calc(100% - 80px);
@@ -765,6 +749,15 @@
     .main {
       border-bottom: 1px solid $dark-blue;
 
+      .notes-list {
+        height: 435px;
+        overflow-y: auto;
+
+        .text-list {
+          height: initial;
+        }
+      }
+
       .new-note {
         position: absolute;
         bottom: 0px;
@@ -1027,9 +1020,13 @@
     }
   }
   &#insights_implications {
+    .media-list-scrollable-tall {
+      height: 385px;
+      overflow: auto;
+    }
 
     ul.text-list {
-      height: 395px;
+      height: auto;
     }
   }
   &#global_hotspots {
@@ -1052,16 +1049,33 @@
     .news-separator {
       padding: 0 4px;
     }
+
+    .media-list-scrollable-tall {
+      height: 610px;
+    }
+
+    .media-list {
+      li {
+        overflow: hidden;
+        width: 360px;
+      }
+    }
   }
   &#top_global_issues {
     .main {
       ul.global-issues-list {
-        height: 260px;
-        overflow-y: auto;
+        height: initial;
+
+        li {
+          &:last-child {
+            border-bottom: 0;
+          }
+        }
       }
 
       .global-issues-list-container {
         height: 270px;
+        overflow-y: auto;
       }
     }
   }
